--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <FrameLayout
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_gravity="center"
-        android:text="Hello World!" />
+        android:background="@color/colorAccent"
+        tools:ignore="UselessParent">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:ellipsize="end"
+            android:text="@string/long_sentence"
+            android:textColor="@android:color/white"
+            app:autoSizeMaxTextSize="60dp"
+            app:autoSizeMinTextSize="40dp"
+            app:autoSizeTextType="uniform" />
+
+    </FrameLayout>
 
 </FrameLayout>
