--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <!-- Ellipsize -->
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:background="@color/colorAccent"
-        tools:ignore="UselessParent">
+        android:ellipsize="end"
+        android:text="@string/long_sentence"
+        android:textColor="@android:color/white"
+        app:autoSizeMaxTextSize="60dp"
+        app:autoSizeMinTextSize="40dp"
+        app:autoSizeTextType="uniform" />
 
-        <!-- Ellipsize -->
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:ellipsize="end"
-            android:text="@string/long_sentence"
-            android:textColor="@android:color/white"
-            app:autoSizeMaxTextSize="60dp"
-            app:autoSizeMinTextSize="40dp"
-            app:autoSizeTextType="uniform" />
-
-        <!-- Word Break -->
-        <!--<TextView-->
-            <!--android:id="@+id/textView"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:ellipsize="end"-->
-            <!--android:text="@string/magnanimous"-->
-            <!--android:textColor="@android:color/white"-->
-            <!--app:autoSizeMaxTextSize="60dp"-->
-            <!--app:autoSizeMinTextSize="1dp"-->
-            <!--app:autoSizeTextType="uniform" />-->
-
-    </FrameLayout>
+    <!-- Word Break -->
+    <!--<TextView-->
+        <!--android:id="@+id/textView"-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:background="@color/colorAccent"-->
+        <!--android:ellipsize="end"-->
+        <!--android:text="@string/magnanimous"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--app:autoSizeMaxTextSize="60dp"-->
+        <!--app:autoSizeMinTextSize="1dp"-->
+        <!--app:autoSizeTextType="uniform" />-->
 
 </FrameLayout>
